# vigil

./: .gitignore  pyproject.toml  vigil.py
src/vigil/: main.py
static/: style.css
templates/: index.html
