[project]
name = "vigil"
version = "0.1.0"
description = "Real-time log aggregator for concurrent development processes"
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.8.0",
    "aiofiles>=22.1.0",
    "jinja2>=3.1.0",
]

[project.scripts]
vigil = "vigil.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
